# anki-export

./: pyproject.toml
anki_export/: app.py
