[project]
name = "anki-export"
version = "0.1.4.1"
description = "Export your Anki *.apkg to Python. Read Anki *.apkg in Python."
authors = [{name="patarapolw", "email"="patarapolw@gmail.com"}, {name="maik-s", email="maiks.github@gmail.com"}]
license = "MIT"
readme = "README.md"
keywords = ["anki"]
requires-python = ">=3.7"

[tool.poetry.dev-dependencies]
pyexcel-xlsxwx = "^0.1.8"
pytest = "^7.0.0"
black = {version = "^22.1.0", allow-prereleases = true}
